# Intercambios

./: README.md  data.csv  note.ipynb  pyproject.toml  topo.csv
intercambios/: extract.py  load.py  main.py  transform.py
intercambios/sql/: cmg_data.sql  gen_data.sql
old/: Intercambios.py
old/libs/: PRG_connect.py  loader.py
old/queries/: NodeCMg.sql  curtailment.sql  genbar.sql  generation.sql  load_query.ipynb
src/intercambios/: __init__.py
src/intercambios/bussiness/: extract.py  transform.py
src/intercambios/cli/: main.py
src/intercambios/model/accdb/: __init__.py  models.py  queries.py
src/intercambios/sql/: cmg_data.sql  gen_data.sql
