[project]
name = "intercambios"
version = "1.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastexcel>=0.12.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "polars>=1.11.0",
    "pydantic>=2.9.2",
    "sqlalchemy-access>=2.0.3",
    "typer>=0.12.5",
]

[project.scripts]
intercambios = "intercambios.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
